# ENI-DevSecOps

./: .bandit  .flake8  .pre-commit-config.yaml  CICD.md  docker-compose.yml  setup.cfg  sonar-project.properties
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: main.py
frontend/: Dockerfile
