[metadata]
name = task-manager
version = 1.0.0
description = Task Manager API with FastAPI
author = ENI DevSecOps

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    .pre-commit-cache

[isort]
profile = black
line_length = 100
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip_glob = [.venv, */migrations/*, */node_modules/*]

[tool:pytest]
testpaths = backend/tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --strict-markers --tb=short

[coverage:run]
source = backend/app
omit =
    */site-packages/*
    */distutils/*
    */venv/*
    .venv/*
